--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,10 @@ julia:
   - nightly
 notifications:
   email: false
-# uncomment the following lines to override the default test script
-#script:
-#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
-#  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("EvolvingGraphs"); Pkg.test("EvolvingGraphs"; coverage=true)'
+
+script:
+  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+  - julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("EvolvingGraphs")'
+  - julia -e 'Pkg.test("EvolvingGraphs"; coverage=true)'
+after_success:
+  - julia -e 'cd(Pkg.dir("EvolvingGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
