--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ os:
   - osx
 julia:
   - release
- # - nightly
+  - nightly
+matrix:
+  allow_failures:
+	- julia: nightly
 notifications:
   email: false
 
