--- a/.travis.yml
+++ b/.travis.yml
@@ -17,3 +17,5 @@ script:
   - julia -e 'Pkg.test("EvolvingGraphs"; coverage=true)'
 after_success:
   - julia -e 'cd(Pkg.dir("EvolvingGraphs")); Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+  - julia -e 'Pkg.add("Documenter")'
+  - julia -e 'cd(Pkg.dir("EvolvingGraphs")); include(joinpath("docs", "make.jl"))'
